--- a/project-1/style.css
+++ b/project-1/style.css
@@ -37,6 +37,20 @@ a{
 .hero-text p{
     font-size: 22px;
 }
+.buttons{
+    margin-top: 30px;
+    display: flex;
+    gap: 20px;
+}
+.btn{
+    padding: 14px 28px;
+    border: 2px solid #000;
+}
+.solid {
+    background-color: black;
+    color: white;
+}
+
 .hero-img{
     max-width: 40%;
 }
