twenty one commit

--- a/project-1/style.css
+++ b/project-1/style.css
@@ -82,3 +82,83 @@ a{
     }
     
 }
+@media (max-width:900px) {
+    .hero{
+        flex-direction: column;
+        text-align: center;
+    }
+    .hero-text{
+        max-width: 100%;
+    }
+    .buttons{
+        justify-content: center;
+    }
+    .hero-img{
+        margin-top: 40px;
+    }
+    
+}
+@media (max-width:900px) {
+    .hero{
+        flex-direction: column;
+        text-align: center;
+    }
+    .hero-text{
+        max-width: 100%;
+    }
+    .buttons{
+        justify-content: center;
+    }
+    .hero-img{
+        margin-top: 40px;
+    }
+    
+}
+@media (max-width:900px) {
+    .hero{
+        flex-direction: column;
+        text-align: center;
+    }
+    .hero-text{
+        max-width: 100%;
+    }
+    .buttons{
+        justify-content: center;
+    }
+    .hero-img{
+        margin-top: 40px;
+    }
+    
+}
+@media (max-width:900px) {
+    .hero{
+        flex-direction: column;
+        text-align: center;
+    }
+    .hero-text{
+        max-width: 100%;
+    }
+    .buttons{
+        justify-content: center;
+    }
+    .hero-img{
+        margin-top: 40px;
+    }
+    
+}
+@media (max-width:900px) {
+    .hero{
+        flex-direction: column;
+        text-align: center;
+    }
+    .hero-text{
+        max-width: 100%;
+    }
+    .buttons{
+        justify-content: center;
+    }
+    .hero-img{
+        margin-top: 40px;
+    }
+    
+}
